# goblins-sts-breeder

./: CHANGELOG.md  README.md  goblins-sts-breeder.cabal  stack.yaml
app/: Main.hs  Parse.hs
src/: BreedingPit.hs  STSExtra.hs
src/STSExtra/: TH.hs
