name:                goblins-sts-breeder
version:             0.1.0.0
synopsis:            Executable to train goblin mutators over `cardano-ledger-specs` STS transition generators, such that the modified generators will trigger `PredicateFailure`s
license:             Apache-2.0
license-file:        LICENSE
author:              IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2019 IOHK
category:            Testing
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     BreedingPit
  build-depends:       base >=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable goblins-sts-breeder
  main-is:             Main.hs
  build-depends:       base >=4.12.0.0
  hs-source-dirs:      app
  default-language:    Haskell2010
